# smallpotato

./: .gitignore  .hgignore  AUTHORS  BUGS  COPYING  ChangeLog  Makefile.am  Makefile.in  NEWS  NEWS.md  README  README.md  THANKS  TODO  ai.c  aleweights  bench.c  bench.h  board.c  board.h  book.c  book.h  bugs.txt  cmdline.c  cmdline.cli  cmdline.h  common.h  communication.c  conf060.ini  config.h  config.h.in  configure  configure.ac  doIO.c  eval.c  hash.h  hashstruct.h  heap.c  heap.h  index.html  (+24 more)
doc/: Makefile  Makefile.am  Makefile.in  commands.txt  help.txt  ideas-todo.txt  tools.txt
libale/: Makefile  Makefile.am  Makefile.in  configure  configure.in  libale.c  libale.h  makelib  testale.c  xmalloc.c
src/: ai.h  basicsearch.c  bench.c  board.c  board.h  book.c  book.h  cmdline.c  cmdline.cli  cmdline.h  communication.h  doIO.c  eval.h  hash.c  moveorder.c  negascout.c  pieces.c  pieces.h  search.c  search.h  unches.c  utils.c  utils.h
tools/: Makefile  Makefile.am  Makefile.in  README.md  actions.py  analog.py  compmovegen.py  configtodefines.py  converttopgn.py  createhelp.py  epdnotsolved.py  initbook.py  makebookfrompgn.py  pgn2epd.py  pgntousermove.py  processpiecevalues.py  procvalues.py  putusermove.py  setboardfrompgn.py  simplelogger.py  testwriteactions.py
website/: addlili.py  index.html  news.html  optus.html  tosourceforge
